[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/HUD/window.png" type="Texture" id=1]
[ext_resource path="res://Player/HUD/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_hud" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/left_hud"]
margin_right = 510.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Health" type="Label" parent="HBoxContainer/left_hud"]
margin_top = 586.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "test"
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_hud" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/right_hud"]
margin_right = 253.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/right_hud"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_right = 253.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="secondary_ammo" type="Label" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_top = 586.0
margin_right = 253.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "test"
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="NinePatchRect" parent="."]
margin_right = 304.0
margin_bottom = 184.0
texture = ExtResource( 1 )
patch_margin_left = 81
patch_margin_top = 72
patch_margin_right = 79
patch_margin_bottom = 66
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Map"]
light_mask = 4
margin_left = 24.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Map/ViewportContainer"]
size = Vector2( 256, 144 )
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Map/ViewportContainer/Viewport"]
transform = Transform( -1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 20, 0 )
cull_mask = 1
projection = 1
size = 50.0
